--- a/index.html
+++ b/index.html
@@ -9,9 +9,34 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Male Stripper Hire The Best In The Business</a>
+      <a class="navbar-brand fw-bold" href="https://hiremalestripper.com">HireMaleStripper</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dancers.html">Dancers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/booking.html">Booking</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
+  
 
   <header class="bg-light text-center py-5">
     <div class="container">
@@ -25,7 +50,7 @@
     <div class="container">
       <h2 class="text-center mb-4">Male Stripper for Hire</h2>
       <center><img src="gen12.jpg" class="img-circle mb-5" alt=""></center>
-      <p>If you're located in my area, I highly recommend booking <a href="https://michaelatyourplace.com">Michael at your place</a> . Michael is the craziest independent male stripper who comes to see you directly, making this not only the best but also the most affordable option. You'll have one of the hottest male dancers walk through your door and perform a show on par with a Chippendales performance. He is well-known for his sensational performances, from brief to nude—a perfect all-around pick for your bachelorette celebration. He brings that strip club energy right to you!</p>
+      <p>If you're located in my area, I highly recommend booking <a href="https://michaelatyourplace.com">Michael at your place</a> . Michael is the craziest independent male stripper who comes to see you directly for Charleston male strip shows, making this not only the best but also the most affordable option. You'll have one of the hottest male dancers walk through your door and perform a show on par with a Chippendales performance. He is well-known for his sensational performances, from brief to nude—a perfect all-around pick for your bachelorette celebration. He brings that strip club energy right to you!</p>
 
       <p>Welcome to the most interactive male stripper for hire. The #1 provider of male strip shows including the hottest male exotic dancer for all occasions. We've been delivering the hottest entertainment with 5-star reviews from satisfied customers across the Lowcountry area. You can count on us to provide professional, sexy, and friendly male strippers for your party or event, including bachelorette parties, birthday parties, surprise parties, passion parties, and more. Don't wait—reserve your strippers to come to you today.</p>
     </div>
