--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
             <a class="nav-link" href="/booking.html">Booking</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/bachelorettes.html">Bachelorettes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/what-is-best.html">What is Best Option?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/what-is-male-strip-show.html">Club Or Private</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/contact.html">Contact</a>
           </li>
         </ul>
