--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,45 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand fw-bold" href="https://hiremalestripper.com">HireMaleStripper</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+      
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/dancers.html">Dancers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/booking.html">Booking</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/bachelorettes.html">Bachelorettes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/what-is-best.html">What is Best Option?</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/what-is-male-strip-show.html">Club Or Private</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      
 
 <!-- Contact Page -->
 <div class="container py-5">
