--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <h3 class="mt-4">Remember That Male Strippers Are Fun</h3>
       <p>Bachelorette parties serve as a festive farewell to the bride’s single life before she enters marriage. To enhance the evening’s excitement, numerous bachelorette parties feature the exhilarating entertainment of male strippers. If you are contemplating the option of hiring a male stripper for your bachelorette celebration, this comprehensive guide will equip you with essential information to make an informed decision and guarantee an enjoyable and unforgettable experience for all participants.</p>
 
-      <p>This site has many pages dedicated to the areas where working male strippers serve who are mostly independent like <a href="http://hardbodydancer.com/">Hardbody Dancer</a> , Tank the Famous, or <a href="https://silverfoxmalestripper.com/">Silverfox Male Stripper</a>  to just local party male strippers.</p>
+      <p>This site has many pages dedicated to the areas where working male strippers serve who are mostly independent like <a href="http://hardbodydancer.com/">Hardbody Dancer</a> , Tank the Famous, or <a href="https://silverfoxmalestripper.com/">Silverfox Male Stripper</a> or <a href="https://adonisdanceacademy.com/">Adonis dance academy</a> to just local party male strippers.</p>
     </div>
   </section>
 
